#11680 Adiciona validação de cargos para distribuição de agendamentos